# salary-test

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
alembic/versions/: 04f47f4243eb_init.py  4cd000f431b1_add_type_to_taxrate.py  aef4491a4587_add_tax_exemptions.py
src/: app.py
src/api/v1/: __init__.py
src/api/v1/exemptions/: crud.py  dependencies.py  router.py  schemas.py
src/api/v1/salary/: router.py  schemas.py
src/api/v1/taxes/: crud.py  dependencies.py  router.py  schemas.py
src/core/: config.py  database.py  init_db.py
src/core/models/: __init__.py  base.py  tax_exemption.py  tax_rate.py
static/: index.html
static/css/: styles.css
static/js/: app.js
